--- a/sample/src/main/res/layout/activity_image_view.xml
+++ b/sample/src/main/res/layout/activity_image_view.xml
@@ -10,8 +10,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
+        android:contentDescription="@string/todo"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg_monkey_king"/>
+        android:src="@drawable/bg_monkey_king" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/view_need_offset"
@@ -24,7 +25,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/transparent"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <TextView
             android:id="@+id/tv_status_alpha"
@@ -33,15 +34,15 @@
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
-            tools:text="112"/>
+            tools:text="112" />
 
         <SeekBar
             android:id="@+id/sb_change_alpha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="-64dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"/>
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="-64dp" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </RelativeLayout>
